2011-10-24  Per Bothner  <per@bothner.com>

	* ReaderParens.java (readList): Pass 'last' variable as parameter.
	If non-null, use that as the initial "list head".
	(read): Above change allows simplification when command is provided.
	It also fixes the column number of the first pair following a command.
	* LispReader.java: Update calls to readList.

2011-10-01  Jamison Hope  <jrh@theptrgroup.com>

	* LispReader.java (readSpecial): Handle #!native.

2011-07-11  Per Bothner  <per@bothner.com>

	Support reading cyclic lists and vectors using SRFI-38 #N= notation.
	* LispReader.java (bindSharedObject): New helper method.
	(readValues): Take extra sharingIndex parameter.
	(readObjectWithSharing, setCar): New methods.
	* ReadTableEntry.java (read(Lexer,int,int,int)): New method,
	takes sharingIndex.
	* ReaderDispatchMisc.java (read): Use readObjectWithSharing.
	* ReaderParens.java: Handle self-referential lists.
	* ReaderVector.java: Handle self-referential vectors.
	* ReaderDispatch.java: Update to new APIs.
	* ReaderXmlElement.java: Likewise.

2011-06-29  Per Bothner  <bothner@kuling.bothner.com>

	* BracketApply.java (rewrite): Parse TYPE[ARGS] like Java's TYPE<ARGS>.
	I.e. create a ParameterizedType value.

2011-04-17  Per Bothner  <per@bothner.com>

	* LispLanguage.java (getLexer): Change to more specific return type.
	* LispReader.java (readCase): New field.
	(getReadCase): Changed to just return the value of the readCase field.
	(loookupReadCase): Lookup value of symbol-read-case.
	(setReadCase): New method.
	(readSpecial): Handle special tokens '#!fold-case' and
	'#!no-fold-case' by setting readCase.

	* LispLanguage.java (defaultReadTable): Make protected.
	Don't initialize here, but do it lazily.
	* ReadTable.java (getCurrent): In needed, initialize defaultReadTable.
	* LispReader.java (validPostfixLookupStart): Don't hardwire ':'.

2011-03-01  Per Bothner  <per@bothner.com>

	* LangObjType.java (makePathProc, makeFilepathProc, makeURIProc):